--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
+
 <head>
   <title>Fabric calture</title>
 </head>
 
 <body>
   <h1>BrandX</h1>
-  <p>This is a paragraph.</p>
+  <p>How are you doing</p>
 </body>
 
 </html>
